[package]
name = "zarray"
version = "1.3.1"
edition = "2021"
authors = ["Christopher Collin Hall"]
description = """Cache-optimized 2D and 3D arrays using Morton order (aka
Z-order) Z-indexed storage, with a convenient API for common 2D and 3D access
 patterns. Use of zarray in place of a Vec of Vecs often improves performance,
 especially for algorithms such as blurring and cellular automata."""
keywords = ["no_std", "Z-order", "array", "map", "Morton"]
categories = ["no-std", "algorithms", "memory-management"]  # see https://crates.io/category_slugs
license = "MIT"
repository = "https://github.com/DrPlantabyte/ZArray-rs"
documentation = "https://docs.rs/zarray/"
readme = "README.md"
homepage = "https://github.com/DrPlantabyte/ZArray-rs"

[dependencies]
array-init = "2"
#optional deps
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
pathfinding = "4"
